# PoCketPacker

./: .gitignore  CMakeLists.txt  GUIMain.py  main.cpp
ELFHandlers/: Allocator.cpp  Allocator.h  CodePatcher.cpp  CodePatcher.h  Utility.cpp  Utility.h
GUI/: Constants.py  GUIHelpers.py  PackerLauncher.py
HelperClasses/: Allocator.cpp  Allocator.h  CodePatcher.cpp  CodePatcher.h  Compressor.cpp  Compressor.h  Globals.cpp  Globals.h
Helpers/: Constants.h  Globals.cpp  Globals.h  Logger.cpp  Logger.h
LoadersCode/: loaders.h  packerLoader.c  writeLoaders.c
PresentationHelpers/: a.id0  a.id1  a.nam  a.out  a_packed.id0  a_packed.id1  a_packed.nam  a_packed.out  a_unpacked.i64  crackme.c
Processors/: Compressor.cpp  Compressor.h
